WIP. Move to turnip

--- a/.rvmrc
+++ b/.rvmrc
@@ -1,7 +1,1 @@
-# if you're using system, let's use 1.9.2. Otherwise, leave the ruby alone
-[[ `rvm tools identifier` == 'system' ]] && rvm use 1.9.2
-
-# create idkfa gemset if necessary
-(rvm gemset list | grep idkfa &> /dev/null) || rvm gemset create idkfa
-
-rvm gemset use idkfa
+rvm use 1.9.3@idkfa --create
